2017-12-04  JF Bastien  <jfbastien@apple.com>

        Update std::expected to match libc++ coding style
        https://bugs.webkit.org/show_bug.cgi?id=180264

        Reviewed by Alex Christensen.

        Update tests according to name changes as well as removal of
        now-gone APIs.

        * TestWebKitAPI/Tests/WTF/Expected.cpp:
        (std::experimental::fundamentals_v3::operator<<):
        (TestWebKitAPI::TEST):
        (WTF::operator<<): Deleted.
        * TestWebKitAPI/Tests/WebCore/HTMLParserIdioms.cpp:
        (TestWebKitAPI::testParseHTMLInteger):
        (TestWebKitAPI::testParseHTMLNonNegativeInteger):

2017-12-04  Ross Kirsling  <ross.kirsling@sony.com>

        download-latest-github-release.py should use existing release ANY time latest is not found
        https://bugs.webkit.org/show_bug.cgi?id=180293

        Reviewed by Per Arne Vollan.

        * Scripts/download-latest-github-release.py:
        (find_latest_release):
        Handle all URLErrors, not just HTTPErrors. Stop special-casing 404s.

        (main):
        Rearrange logic so any failure to detect a latest release falls back to an existing release. Improve logging.

        (Status):
        (download_release):
        (load_version_info): Renamed from existing_version info.
        (has_latest_release): Deleted.
        Cleanup.

2017-12-04  Joseph Pecoraro  <pecoraro@apple.com>

        Exclude some more leak callstacks
        https://bugs.webkit.org/show_bug.cgi?id=180379

        Reviewed by Alexey Proskuryakov.

        * Scripts/webkitpy/port/leakdetector.py:
        (LeakDetector._types_to_exclude_from_leaks):
        (LeakDetector._callstacks_to_exclude_from_leaks):
        (LeakDetector._leaks_args):
        (LeakDetector._types_to_exlude_from_leaks): Deleted.
        * Scripts/webkitpy/port/leakdetector_unittest.py:
        (LeakDetectorTest.test_leaks_args):

2017-12-03  Yusuke Suzuki  <utatane.tea@gmail.com>
